--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
+    "expo-local-authentication": "~15.0.2",
     "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.22",
     "expo-sqlite": "~15.1.4",
