--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
     "expo-local-authentication": "~15.0.2",
+    "expo-network": "~7.0.5",
     "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.24",
     "expo-sqlite": "~15.1.4",
