feat: create to sign-in with userHash

--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "scheme": "myexpenses",
     "userInterfaceStyle": "dark",
     "newArchEnabled": true,
     "ios": {
@@ -18,11 +18,6 @@
         "backgroundColor": "#ffffff"
       },
       "package": "br.com.myexpenses"
-    },
-    "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
       "expo-router",
@@ -46,9 +41,7 @@
             "useSQLCipher": false
           },
           "ios": {
-            "customBuildFlags": [
-              "-DSQLITE_ENABLE_DBSTAT_VTAB=1 -DSQLITE_ENABLE_SNAPSHOT=1"
-            ]
+            "customBuildFlags": ["-DSQLITE_ENABLE_DBSTAT_VTAB=1 -DSQLITE_ENABLE_SNAPSHOT=1"]
           }
         }
       ],
@@ -58,7 +51,15 @@
           "faceIDPermission": "Allow $(PRODUCT_NAME) to use Face ID."
         }
       ],
-      "expo-web-browser"
+      [
+        "expo-asset",
+        {
+          "empty-animation": "./assets/animations/empty.json",
+          "error-animation": "./assets/animations/error.json",
+          "loading-animation": "./assets/animations/loading.json",
+          "success-animation": "./assets/animations/success.json"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
