--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-picker/picker": "2.11.0",
     "@supabase/supabase-js": "^2.49.4",
     "expo": "^53.0.5",
+    "expo-asset": "~11.1.4",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.5",
     "expo-crypto": "~14.1.4",
