feat: add tab routes and user info

--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-picker/picker": "2.11.0",
     "@supabase/supabase-js": "^2.49.4",
+    "clsx": "^2.1.1",
     "expo": "^53.0.5",
     "expo-asset": "~11.1.4",
     "expo-blur": "~14.1.4",
+    "expo-clipboard": "~7.1.4",
     "expo-constants": "~17.1.5",
     "expo-crypto": "~14.1.4",
     "expo-dev-client": "~5.1.7",
