--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "lint": "eslint . --fix "
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
+    ]
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.3.0",
@@ -58,17 +61,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/jest": "^29.5.12",
+    "@testing-library/react-native": "^13.2.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.3.0",
     "eslint": "^8.57.1",
     "eslint-config-expo": "~9.2.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.6",
-    "jest": "^29.2.1",
-    "jest-expo": "~53.0.3",
+    "jest": "~29.7.0",
+    "jest-expo": "~53.0.5",
     "prettier": "^3.5.3",
-    "react-test-renderer": "18.3.1",
+    "react-test-renderer": "19.0.0",
     "typescript": "^5.3.3"
   },
   "private": true
