--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native": "0.79.2",
     "react-native-advanced-checkbox": "^2.0.5",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-portalize": "^1.0.7",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
