--- a/package.json
+++ b/package.json
@@ -25,21 +25,21 @@
     "@react-native-picker/picker": "2.11.0",
     "@supabase/supabase-js": "^2.49.4",
     "clsx": "^2.1.1",
-    "expo": "^53.0.5",
-    "expo-asset": "~11.1.4",
+    "expo": "53.0.9",
+    "expo-asset": "~11.1.5",
     "expo-blur": "~14.1.4",
     "expo-clipboard": "~7.1.4",
-    "expo-constants": "~17.1.5",
+    "expo-constants": "~17.1.6",
     "expo-crypto": "~14.1.4",
-    "expo-dev-client": "~5.1.7",
-    "expo-font": "~13.3.0",
+    "expo-dev-client": "~5.1.8",
+    "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-linking": "~7.1.4",
+    "expo-linking": "~7.1.5",
     "expo-local-authentication": "~16.0.4",
     "expo-network": "~7.1.5",
-    "expo-router": "~5.0.4",
+    "expo-router": "~5.0.7",
     "expo-splash-screen": "~0.30.8",
-    "expo-sqlite": "~15.2.9",
+    "expo-sqlite": "~15.2.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
