--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@gorhom/bottom-sheet": "^5",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-native-picker/picker": "2.11.0",
     "@supabase/supabase-js": "^2.49.4",
+    "@tanstack/react-query": "^5.81.2",
     "clsx": "^2.1.1",
     "expo": "53.0.9",
     "expo-asset": "~11.1.5",
