--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-constants": "~17.1.6",
     "expo-crypto": "~14.1.4",
     "expo-dev-client": "~5.1.8",
+    "expo-device": "^7.1.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-linking": "~7.1.5",
@@ -75,7 +76,9 @@
     "jest": "~29.7.0",
     "jest-expo": "~53.0.5",
     "prettier": "^3.5.3",
+    "react-query-external-sync": "^2.2.3",
     "react-test-renderer": "19.0.0",
+    "socket.io-client": "^4.8.1",
     "typescript": "^5.3.3"
   },
   "private": true
