--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
+    "supabase": "^2.30.4",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
